package com.Server;


public class ServerDriver {
	public static void main(String[] args) {
		
		Server myServer = new Server();
		
		myServer.startServer();

	}
} 
